# bc-z

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_example.py  test_dataset_load.py
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
docs/: dataset_usage.md
examples/: dataloader.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  backbone.py  film.py  policy.py
src/training/: losses.py  trainer.py
src/utils/: configs.py  metrics.py
tests/: __init__.py  test_dataset.py  test_losses.py  test_metrics.py  test_models.py  test_trainer.py
tests/fixtures/: create_test_data.py  test_data.tfrecord
